--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 #Colors
 include ~/.config/kitty/colorshemes/grey-wall.conf
 # Fonts
-#font_family      Hack Nerd Font
-font_family     CascadiaCodePL-SemiBoldItalic 
+font_family      Hack Nerd Font
+#font_family     CascadiaCodePL-SemiBoldItalic 
 font_size        10
 
 adjust_line_height 0
