--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,8 +1,9 @@
 #Colors
-include ~/.config/kitty/colorshemes/grey-wall.conf
+include ~/.config/kitty/colorshemes/wall-04.conf
 # Fonts
-font_family      Hack Nerd Font
-#font_family     CascadiaCodePL-SemiBoldItalic 
+#font_family      Hack Nerd Font
+font_family      FiraCode Nerd Font SemBd
+#font_family      CascadiaCodePL-SemiBoldItalic 
 font_size        10
 
 adjust_line_height 0
@@ -24,11 +25,11 @@ wheel_scroll_multiplier 5.0
 url_style double
 url_color #61afef
 open_url_modifiers ctrl+shift
-open_url_with firefox
+open_url_with chromium
 copy_on_select yes
 
 # Shell
-#shell zsh
+# shell zsh
 close_on_child_death no
 allow_remote_control yes
 term xterm-256color
@@ -43,10 +44,10 @@ remember_window_size   no
 initial_window_width   700
 initial_window_height  400
 window_border_width 1.5
-window_margin_width 5
-window_padding_width 5
+window_margin_width 3
+window_padding_width 3
 inactive_text_alpha 1.0
-background_opacity 1.0 
+background_opacity 1
 draw_minimal_borders yes
 
 # Performance
@@ -61,15 +62,15 @@ dim_opacity 0.60
 dynamic_background_opacity no
 
 #map
-map ctrl+alt+h neighboring_window left
-map ctrl+alt+l neighboring_window right
-map ctrl+alt+k neighboring_window up
-map ctrl+alt+j neighboring_window down
+map super+shift+h neighboring_window left
+map super+shift+l neighboring_window right
+map super+shift+k neighboring_window up
+map super+shift+j neighboring_window down
 
 #tab and color
 tab_bar_style powerline
-inactive_tab_background #4d5d66
-active_tab_background #6f8292
+inactive_tab_background #5B5D64
+active_tab_background #54617E
 inactive_tab_foreground #000000
 tab_bar_margin_color black
 
@@ -83,3 +84,8 @@ map ctrl+shift+q close_window
 
 map ctrl+shift+plus change_font_size all +2.0
 map ctrl+shift+minus change_font_size all -2.0
+
+map ctrl+p scroll_line_up 
+map ctrl+ñ scroll_line_down
+
+map super+p focus_visible_window
